recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:7: error: not found: value step
    current(step)
            ^Tree:14: error: not found: value step
    current(step)
            ^